further instruction tweaks
